# bsw_code_gen

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
bsw_code_gen/: __init__.py  __main__.py  bsw_code_gen.py  cli.py  main.py
