[metadata]
name = bsw_code_gen
version = 0.1.12
author = Guillaume Sottas
author_email = guillaumesottas@gmail.com
description = Generic code generator used to generate C sources and headers of BSW modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openmcusw/bsw_code_gen
license = BSD-2 License

[options]
install_requires =
	argparse~=1.4.0
	jsonschema
    Jinja2~=2.11.3
packages =
	bsw_code_gen
include_package_data = True

[options.entry_points]
console_scripts =
	bsw_code_gen = bsw_code_gen.cli:main
